--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Hi git</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero provident similique voluptatem magnam tempore. Ex perferendis magni quod temporibus, quaerat, labore iusto quasi necessitatibus esse modi, numquam autem officia velit.</p>
+    <h2>Title h2</h2>
     <ul>
         <li>11111</li>
         <li>22222</li>
