delete h2 title and add button

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <h1>Hi git</h1>
-    <h2>Title h2</h2>
+    <button>Click!!!</button>
     <h3>title h3</h3>
     <ul>
         <li>77777</li>
         <li>88888</li>
-        <li>3333333</li>
+        <li>9999999</li>
         <li>4444444</li>
     </ul>
 </body>
